[package]
name = "docker-image-pusher"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
oci-client = { version = "0.15.0", features = ["rustls-tls"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "fs"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
sha256 = "1.1"
